--- a/manifest.json
+++ b/manifest.json
@@ -1,10 +1,11 @@
 {
-  "name": "Getting Started Example",
+  "name": "Z-Extension",
   "version": "1.0",
   "description": "Build an Extension!",
   "manifest_version": 2,
   "background": {
     "scripts": [
+      "pluginUtilities.js",
       "background.js"
     ],
     "persistent": false
@@ -27,6 +28,7 @@
     ]
   }],
   "browser_action": {
+    "default_icon": "icon.png",
     "default_popup": "popup.html"
   } 
 }
